--- a/desafios/desafio012/estilo/style.css
+++ b/desafios/desafio012/estilo/style.css
@@ -65,15 +65,33 @@ section.normal {
     color: black;
 }
 
+section.normal p {
+    padding-bottom: 2em;
+}
+
 section.imagem {
     background-color: rgb(48, 48, 48);
     color: white;
+    background-attachment: fixed;
+    background-position: right center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.349);
 }
 
 section.imagem > p {
-    background-color: rgba(0, 0, 0, 0.2);
+    background-color: rgba(0, 0, 0, 0.5);
     display: inline-block;
     padding: 10px;
+    text-shadow: 1px 1px 0px black;
+}
+
+section#img01 {
+    background-image: url(../imagens/background001.jpg);
+}
+
+section#img02 {
+    background-image: url(../imagens/background002.jpg);
 }
 
 footer {
