--- a/exercicios/ex026 - Media Queries/mq002/estilos/style.css
+++ b/exercicios/ex026 - Media Queries/mq002/estilos/style.css
@@ -1,3 +1,24 @@
 @charset "UTF-8";
 
 /* Configurações gerais */
+
+* {
+    margin: 0;
+    padding: 0;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+html, body {
+    width: 100vw;
+    height: 100vh;
+    background-color: #233eff;
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+}
+
+h1 {
+    color: white;
+    text-shadow: 2px 2px 0px #4423ff;
+    padding: 10px;
+}
