--- a/exercicios/ex026 - Media Queries/mq005/estilos/style.css
+++ b/exercicios/ex026 - Media Queries/mq005/estilos/style.css
@@ -1,12 +1,84 @@
 @charset "UTF-8";
 
-* {
-    margin: 0;
-    padding: 0;
-    font-family: 'Roboto', Arial, Helvetica, sans-serif;
+.material-symbols-rounded {
+    font-variation-settings:
+        'FILL' 0,
+        'wght' 400,
+        'GRAD' 0,
+        'opsz' 48
 }
 
-html, body {
-    height: 100vh;
-    width: 100vw;
+* {
+    font-family: 'Roboto', Arial, Helvetica, sans-serif;
+    margin: 0;
+    padding: 0;
+}
+
+html,
+body {
+    background-color: lightgrey;
+}
+
+header {
+    background-color: grey;
+}
+
+header>h1 {
+    padding: 10px;
+    text-align: center;
+}
+
+span#burguer {
+    background-color: rgb(53, 53, 53);
+    display: block;
+    color: white;   
+    padding: 10px;
+    text-align: center;
+    cursor: pointer;
+}
+
+span#burguer:hover {        
+    background-color: white;
+    color: rgb(53, 53, 53);
+}
+
+menu {
+    display: none;
+}
+
+menu>ul {
+    list-style-type: none;
+}
+
+menu>ul>li>a {
+    display: block;
+    padding: 10px;
+    text-decoration: none;
+    text-align: center;
+    background-color: rgb(99, 99, 99);
+    color: white;
+    border-top: 2px solid rgb(87, 87, 87);
+}
+
+menu>ul>li>a:hover {
+    background-color: gray;
+}
+
+main {
+    width: 90vw;
+    background-color: white;
+    margin: 0 auto;
+    margin-top: 10px;
+    padding: 10px;
+    border-radius: 10px;
+}
+
+article>h2 {
+    padding-bottom: 20px;
+}
+
+article p {
+    text-align: justify;
+    margin-bottom: 20px;
+    text-indent: 20px;
 }
